<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudyBuddy</string>
    <string name="action_settings">Settings</string>

    <!-- MAIN ACTIVITY -->
    <string name="ui_main_input_tab">Input</string>
    <string name="ui_main_view_tab">View</string>
    <string name="ui_main_http_tab">HTTP testing</string>
    <string name="main_label_filter">Filter Results by:</string>
    <string name="main_go_button">Go!</string>

    <string-array name="results_filter_items">
        <item>Noise</item>
        <item>Crowdedness</item>
        <item>Productivity</item>
    </string-array>

    <!-- BROWSE ROOM ACTIVITY -->
    <string name="title_activity_browse_room">Browse Rooms</string>

    <!-- DISPLAY ROOM ACTIVITY -->
    <string name="title_activity_display_room">DisplayRoomActivity</string>
    <string name="display_browse_button">Back</string>
    <string name="display_noise_chart_label">Noise Level</string>
    <string name="display_crowd_chart_label">Crowd Level</string>
    <string name="display_rating_label">Productivity</string>

    <!-- DATA INPUT ACTIVITY -->
    <string name="ui_data_input_user_label">Username:</string>
    <string name="ui_data_input_user_hint">Always use the same one</string>
    <string name="ui_data_input_building_label">Building:</string>
    <string name="ui_data_input_building_hint">Enter the buliding or area name</string>
    <string name="ui_data_input_room_label">Room:</string>
    <string name="ui_data_input_room_hint">Enter the room name or number</string>
    <string name="ui_data_input_rating_label">Overall rating:</string>
    <string name="ui_data_input_noise_label">How noisy was it?</string>
    <string name="ui_data_input_crowd_label">How crowded is it?</string>
    <string name="ui_data_input_capacity_label">This space is ideal for:</string>
    <string name="ui_data_input_productivity_label">How productive were you?</string>
    <string name="ui_data_input_wifi_label">Wifi Network:</string>
    <string name="ui_data_input_wifi_hint">127.0.0.1</string>
    <string name="ui_data_input_latlng_label">Location:</string>
    <string name="ui_data_input_latlng_default">0.0000\n0.0000</string>
    <string name="ui_data_input_submit">Save Snapshot</string>
    <string name="ui_data_input_cancel">Cancel</string>
    <string name="ui_data_input_view_entries">View Entries</string>

    <!-- ROOM DEF -->

    <string name="ui_room_def_name">Name</string>
    <string name="ui_room_def_features">Features</string>
    <string name="ui_room_def_noise">Noise Level</string>
    <string name="ui_room_def_crowd">Crowdedness</string>
    <string name="ui_room_def_capacity">Room Capacity</string>
    <string name="ui_room_def_map_label">Where is the room? (Click to place marker)</string>
    <string name="ui_room_def_name_hint">Building name and room number</string>
    <string name="ui_room_def_features_hint">Description and features</string>
    <string name="settings_room_def">Add Study Space</string>
    <string name="ui_room_def_save_button">Save Room</string>
    <string name="ui_room_def_cancel_button">Cancel</string>
	
    <!-- SURVEY ACTIVITY -->
    <string name="title_activity_survey">How was your study session?</string>
    <string name="ui_survey_crowd_label">How crowded was it?</string>
    <string name="ui_survey_productivity_label">How productive were you?</string>
    <string name="ui_survey_button_label">OK!</string>
    
    <!-- SENSOR SERVICE -->
    <string name="ui_main_notification_title">Study Buddy</string>
    <string name="ui_main_notification_description">Find more study spaces</string>

    <!-- BUNDLE EXTRAS TAGS -->
    <string name="extras_room_location">room_location_tag</string>

    <!-- SHARED PREFERENCES -->
    <string name="preferences_key">study_buddy_preferences_key</string>
    <string name="pkey_username">pkey_username</string>

    <string-array name="campus_buildings">
        <item>Gile</item>
        <item>Sudikoff</item>
        <item>Baker-Berry</item>
        <item>Thayer</item>
        <item>Novack</item>
        <item>Collis</item>
        <item>Sarner</item>
        <item>Stacks</item>
        <item>Kemeny</item>
        <item>Robo</item>
        <item>Dirt Cowboy</item>
        <item>Foco</item>
        <item>LSC</item>
        <item>Paddock</item>
        <item>Feldberg</item>
    </string-array>
</resources>