<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/room_def_mapview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ui_room_def_map_label" />

        <fragment
            android:id="@+id/map"
            android:layout_width="320dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            class="com.google.android.gms.maps.MapFragment" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ui_room_def_name" />

            <AutoCompleteTextView
                android:id="@+id/room_def_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ui_room_def_name_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ui_room_def_features" />

            <EditText
                android:id="@+id/room_def_features"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ui_room_def_features" />

            <TextView
                android:id="@+id/noiseBarLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ui_room_def_noise" />

            <SeekBar
                android:id="@+id/noiseSeekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:max="3" />

            <TextView
                android:id="@+id/crowdBarLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ui_room_def_crowd" />

            <SeekBar
                android:id="@+id/crowdSeekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:max="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_room_def_capacity"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/room_def_capacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ui_room_def_capacity"
                android:inputType="number" >
            </EditText>

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:weightSum="2" >

                <Button
                    android:id="@+id/saveButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:onClick="onClickSave"
                    android:text="@string/ui_room_def_save_button" />

                <Button
                    android:id="@+id/cancelButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:onClick="onClickCancel"
                    android:text="@string/ui_room_def_cancel_button" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>