<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SurveyActivity" >

    <TextView
        android:id="@+id/crowdBarLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_survey_crowd_label"
        android:layout_marginTop="100dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <SeekBar
        android:id="@+id/crowdSeekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:max="3"/>

    <TextView
        android:id="@+id/productivityBarLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_survey_productivity_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <SeekBar
        android:id="@+id/productivitySeekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:max="4"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/survey_jelly_button"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/jelly_go"
            android:background="@drawable/state_list_drawable"
            android:onClick="onClickOk" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ui_survey_button_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</LinearLayout>