<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".DisplayRoomActivity" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3" >
        
        <fragment
            android:id="@+id/map"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            
            class="com.google.android.gms.maps.MapFragment" />
        
        <LinearLayout 
			android:layout_width="100dp"
        	android:layout_height="fill_parent"
        	android:orientation="vertical"
			android:paddingLeft="10dp"
        	android:gravity="center_vertical" >
        	
            <TextView
                android:id="@+id/displayRoomNoiseLabel"
                android:layout_width="80dp"
                android:layout_height="wrap_content" 
				android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <ImageView
                android:id="@+id/display_room_noisejelly"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center_horizontal"
                android:src="@drawable/jelly_green" />
        </LinearLayout>
        
        <LinearLayout 
			android:layout_width="100dp"
        	android:layout_height="fill_parent"
        	android:orientation="vertical"
        	android:gravity="center_vertical" >           
            <TextView
       			android:id="@+id/displayRoomCrowdLabel"
        		android:layout_width="80dp"
        		android:layout_height="wrap_content"
        		android:gravity="center_horizontal"
        		android:textAppearance="?android:attr/textAppearanceSmall" />
            <ImageView
                android:id="@+id/display_room_crowdjelly"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center_horizontal"
                android:src="@drawable/jelly_green" />
		</LinearLayout>
    </LinearLayout>
    
	<TextView
    	android:id="@+id/displayRoomNoiseChartLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/display_noise_chart_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />    

	<HorizontalScrollView
		android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
	    
	    <LinearLayout
			android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/displayRoomNoiseTime1"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/displayRoomNoiseValue1"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/displayRoomNoiseTime2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/displayRoomNoiseValue2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="5"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/displayRoomNoiseTime3"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/displayRoomNoiseValue3"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="3"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/displayRoomNoiseTime4"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/displayRoomNoiseValue4"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="6"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/displayRoomNoiseTime5"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/displayRoomNoiseValue5"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="10"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/displayRoomNoiseTime6"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/displayRoomNoiseValue6"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="8"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
	    </LinearLayout>
	</HorizontalScrollView>
	
	<TextView
    	android:id="@+id/displayRoomCrowdChartLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/display_crowd_chart_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />    

	<HorizontalScrollView
		android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
	    
	    <LinearLayout
			android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/displayRoomCrowdTime1"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/displayRoomCrowdValue1"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/displayRoomCrowdTime2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/displayRoomCrowdValue2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="1"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/displayRoomCrowdTime3"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/displayRoomCrowdValue3"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="2"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/displayRoomCrowdTime4"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/displayRoomCrowdValue4"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="3"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/displayRoomCrowdTime5"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/displayRoomCrowdValue5"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="4"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/displayRoomCrowdTime6"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/displayRoomCrowdValue6"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="5"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
	    </LinearLayout>
	</HorizontalScrollView>
	
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/display_rating_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />  
	
    <RatingBar 
        android:id="@+id/displayRoomRatingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center"/>

	<Button 
	    android:id="@+id/display_room_back_button"
	    android:text="@string/display_browse_button"
		android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:onClick="onBackClicked" />
    
</LinearLayout>